--- a/app/src/main/res/layout/sample_recyclerview.xml
+++ b/app/src/main/res/layout/sample_recyclerview.xml
@@ -18,13 +18,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="90dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/food1" />
 
@@ -38,6 +38,13 @@
                 android:text="TextView"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/image_delete"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_delete" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
